[B]0.4.5[/B]
Consolidation of OSD info views
  -- Small now called 'offset'
  -- Medium now called 'tabbed'
  -- On-screen called 'on-screen'
  -- Full-width removed

[B]0.4.4[/B]
Updates to on-screen music info view
Updates to on-screen music osd

[B]0.4.3[/B]
Updated translations from transifex
Added option for "on-screen" music info
Set default focus to subtitles
Minor tweak to simple home - submenu on click up from submenu closes it
Fix lovefilm in sets - no item preload so reports right page number
Fix broken addon text overlapping
Fix choose art option for episodes
Add scrolling text to panel list focused item
Change default director icon to clapboard

[B]0.4.2[/B]
Altered mixed widget scroll behaviour to be up for simple and down for panel
Added option to scroll between 'simple' widget types on up/down as default
 -- option to prevent in Skin Settings > Home > Manage custom widgets
Added no-videologo.png and no-musiclogo.png to extras/widgets folder 
 -- change these for what displays when no clearlogo is available to widgets
Changed Artwork Downloader to download bulk depending on its own settings
Fixed widget label persistence when other menu ids are open
Added "Launch" button for Addon info

[B]0.4.1[/B]
Fixed focus of mixed widget to first item
Fixed clock always showing in music vis
Fixed double assignment of ids in "View Options"
Swapped In-progress and Spotlight on mixed widget
Added falback icon for logos on widget information

[B]0.4.0[/B]
Addition of Mixed Widget
Fixed video library update label not long enough
Fixed DialogExtendedProgress.xml from closing on Home.xml
Added banner and info-wall to add-ons
Added half stars to Alaska Black font
Re-instated Arctic fade for simple home screen
-- add to guisettings.xml to revert: 
-- <setting type="bool" name="skin.arctic.home.simple.fade">true</setting>

[B]0.3.9[/B]
Moved ratings and resolution flags out to extras folder for user customisation